<resources>
	<string name="app_name">NetworkExampleLevelUp</string>

	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>
	<string name="sign_up">Sign Up</string>
	<string name="repeat_pwd">Repeat password</string>
	<string name="pwd">Password</string>
	<string name="username">Username</string>
</resources>
