<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
	>

	<!--<TextView-->
		<!--android:layout_width="wrap_content"-->
		<!--android:layout_height="wrap_content"-->
		<!--android:layout_gravity="center_horizontal"-->
		<!--android:layout_marginBottom="32dp"-->
		<!--android:text="@string/app_name"-->
		<!--android:textColor="@color/colorPrimaryDark"-->
		<!--android:textSize="32dp"/>-->

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:background="@color/colorPrimary"
		app:title="@string/app_name"
		app:popupTheme="@style/Theme.AppCompat.Light"/>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:background="@drawable/border"
		android:padding="8dp">
		<ImageView
			android:id="@+id/image"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>
	</FrameLayout>



	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp">

		<EditText
			android:id="@+id/username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username"
			android:inputType="textCapSentences"
			android:textColor="@android:color/black"
			android:textSize="18sp"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp">

		<EditText
			android:id="@+id/pwd"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/pwd"
			android:textColor="@android:color/black"
			android:textSize="18sp"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp">

		<EditText
			android:id="@+id/repeat"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/repeat_pwd"
			android:textColor="@android:color/black"
			android:textSize="18sp"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/sign_up"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:background="@color/colorAccent"
		android:text="@string/sign_up"
		android:textAllCaps="false"
		android:textColor="@android:color/white"
		android:textSize="18dp"/>

</LinearLayout>